results/SVCOMP/conversational/log-boundcheck100-2024_03_08_20_40_47.txt
public class boundcheck100 {

    //@ requires i >= Integer.MIN_VALUE && i <= Integer.MAX_VALUE;
    private static void recursion(int i) {
        if (i == 0) {
            return;
        }
        if (i > 0) {
            //@ maintaining i >= 0;
            //@ decreases i;
            recursion(i - 1);
        }
        if (i < 0) {
            assert false;
        }
    }
}
/home/max/Documents/JMLGPT/tmp/boundcheck100.java:9: error: Loop specifications must immediately precede a loop statement
            //@ maintaining i >= 0;
                ^
1 error

public class boundcheck100 {

    //@ requires i >= Integer.MIN_VALUE && i <= Integer.MAX_VALUE;
    private static void recursion(int i) {
        if (i == 0) {
            return;
        }
        if (i > 0) {
            //@ decreases i;
            recursion(i - 1);
        }
        if (i < 0) {
            assert false;
        }
    }
}
/home/max/Documents/JMLGPT/tmp/boundcheck100.java:9: error: Loop specifications must immediately precede a loop statement
            //@ decreases i;
                ^
1 error

public class boundcheck100 {

    //@ requires i >= Integer.MIN_VALUE && i <= Integer.MAX_VALUE;
    private static void recursion(int i) {
        if (i == 0) {
            return;
        }
        if (i > 0) {
            //@ maintaining i >= 0;
            //@ decreases i;
            recursion(i - 1);
        }
        if (i < 0) {
            assert false;
        }
    }
}
/home/max/Documents/JMLGPT/tmp/boundcheck100.java:9: error: Loop specifications must immediately precede a loop statement
            //@ maintaining i >= 0;
                ^
1 error

public class boundcheck100 {

    //@ requires i >= Integer.MIN_VALUE && i <= Integer.MAX_VALUE;
    private static void recursion(int i) {
        if (i == 0) {
            return;
        }
        if (i > 0) {
            //@ decreases i;
            recursion(i - 1);
        }
        if (i < 0) {
            assert false;
        }
    }
}
/home/max/Documents/JMLGPT/tmp/boundcheck100.java:9: error: Loop specifications must immediately precede a loop statement
            //@ decreases i;
                ^
1 error

public class boundcheck100 {

    //@ requires i >= Integer.MIN_VALUE && i <= Integer.MAX_VALUE;
    private static void recursion(int i) {
        if (i == 0) {
            return;
        }
        if (i > 0) {
            //@ decreases i;
            recursion(i - 1);
        }
        if (i < 0) {
            assert false;
        }
    }
}
/home/max/Documents/JMLGPT/tmp/boundcheck100.java:9: error: Loop specifications must immediately precede a loop statement
            //@ decreases i;
                ^
1 error

public class boundcheck100 {

    //@ requires i >= Integer.MIN_VALUE && i <= Integer.MAX_VALUE;
    private static void recursion(int i) {
        if (i == 0) {
            return;
        }
        if (i > 0) {
            //@ maintaining i >= 0;
            //@ decreases i;
            recursion(i - 1);
        }
        if (i < 0) {
            assert false;
        }
    }
}
/home/max/Documents/JMLGPT/tmp/boundcheck100.java:9: error: Loop specifications must immediately precede a loop statement
            //@ maintaining i >= 0;
                ^
1 error

public class boundcheck100 {

    //@ requires i >= Integer.MIN_VALUE && i <= Integer.MAX_VALUE;
    private static void recursion(int i) {
        if (i == 0) {
            return;
        }
        if (i > 0) {
            //@ decreases i;
            recursion(i - 1);
        }
        if (i < 0) {
            assert false;
        }
    }
}
/home/max/Documents/JMLGPT/tmp/boundcheck100.java:9: error: Loop specifications must immediately precede a loop statement
            //@ decreases i;
                ^
1 error

public class boundcheck100 {

    //@ requires i >= Integer.MIN_VALUE && i <= Integer.MAX_VALUE;
    private static void recursion(int i) {
        if (i == 0) {
            return;
        }
        if (i > 0) {
            //@ decreases i;
            recursion(i - 1);
        }
        if (i < 0) {
            assert false;
        }
    }
}
/home/max/Documents/JMLGPT/tmp/boundcheck100.java:9: error: Loop specifications must immediately precede a loop statement
            //@ decreases i;
                ^
1 error

public class boundcheck100 {

    //@ requires i >= Integer.MIN_VALUE && i <= Integer.MAX_VALUE;
    private static void recursion(int i) {
        if (i == 0) {
            return;
        }
        if (i > 0) {
            //@ decreases i;
            recursion(i - 1);
        }
        if (i < 0) {
            assert false;
        }
    }
}
/home/max/Documents/JMLGPT/tmp/boundcheck100.java:9: error: Loop specifications must immediately precede a loop statement
            //@ decreases i;
                ^
1 error

public class boundcheck100 {

    //@ requires i >= Integer.MIN_VALUE && i <= Integer.MAX_VALUE;
    private static void recursion(int i) {
        if (i == 0) {
            return;
        }
        if (i > 0) {
            //@ decreases i;
            recursion(i - 1);
        }
        if (i < 0) {
            assert false;
        }
    }
}
/home/max/Documents/JMLGPT/tmp/boundcheck100.java:9: error: Loop specifications must immediately precede a loop statement
            //@ decreases i;
                ^
1 error

